--- a/syntaxes/yuiscript.tmLanguage.yaml
+++ b/syntaxes/yuiscript.tmLanguage.yaml
@@ -181,6 +181,7 @@ repository:
               captures:
                   "0":
                       name: meta.object-literal.key.js
+
             ## disabled until implemented ##
             # - name: meta.object.member.js
             #   begin: \.\.\.
@@ -190,11 +191,15 @@ repository:
             #   end: (?=,|\})
             #   patterns:
             #       - include: "#expression"
-            - name: meta.object.member.js
-              begin: (?=[_[:alpha:]][_[:alnum:]]*\s*=)
-              end: (?=,|\}|$|\/\/|\/\*)
-              patterns:
-                  - include: "#expression"
+
+            ## disabled until supported ##
+            ## below captures 'foo = bar' in '{ foo = bar, }'
+            # - name: meta.object.member.js
+            #   begin: (?=[_[:alpha:]][_[:alnum:]]*\s*=)
+            #   end: (?=,|\}|$|\/\/|\/\*)
+            #   patterns:
+            #       - include: "#expression"
+
             - name: meta.object.member.js
               begin: ":"
               beginCaptures:
